--- a/01/index.html
+++ b/01/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>用 JavaScript 画光</title>
+    <title>用 JavaScript 画光 01</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
