--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <a href="/01">01 基础</a>
+    <p><a href="/01">01 基础</a></p>
+    <p><a href="/02">02 构造几何实体</a></p>
 </body>
 
 </html>
