--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <p><a href="./01">01 基础</a></p>
     <p><a href="./02">02 构造几何实体</a></p>
+    <p><a href="./03">03 形状</a></p>
 </body>
 
 </html>
