加入矩形和三角形

--- a/03/index.html
+++ b/03/index.html
@@ -12,6 +12,8 @@
         <option value=capsule>capsule 胶囊</option>
         <option value=box>box 矩形</option>
         <option value=rounded-box>rounded box 圆角矩形</option>
+        <option value=triangle>triangle 三角形</option>
+        <option value=rounded-triangle>rounded-triangle 圆角三角形</option>
     </select>
     <canvas width="512" height="512"></canvas>
     <script src="index.js"></script>
